{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "3916f0f2-de1c-1971-d32a-8ae1ac5dc462",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "INFRANAME-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026c215b6c62ddbaa",
            "domain": "vpc",
            "id": "eipalloc-026c215b6c62ddbaa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-1-185.compute-1.amazonaws.com",
            "public_ip": "34.235.1.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-0952704f8d9a49021",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0952704f8d9a49021",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e7547e607779bf7",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016a5b64f2d5592c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702337b2e58c9e59",
            "tags": {
              "Name": "INFRANAME-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff5e24b0af7b2f45"
            ]
          },
          "dependencies": [
            "aws_instance.INFRANAME-INSTANCE-PUBLIC-PROXY",
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-PROXY",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_subnet.INFRANAME-SUBNET-AZ-A",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-00d23397d0d3a5910",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d23397d0d3a5910",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e1e8c0ea2255f82",
            "private_dns": "ip-10-0-3-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a27f169b267c3379",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0098aa8e044f55d58",
            "tags": {
              "Name": "INFRANAME-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff5e24b0af7b2f45"
            ]
          },
          "dependencies": [
            "aws_instance.INFRANAME-INSTANCE-PUBLIC-PROXY",
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-PROXY",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_subnet.INFRANAME-SUBNET-AZ-B",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-00b2955c57c942166",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b2955c57c942166",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-068c3df044094c10d",
            "private_dns": "ip-10-0-4-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f2d71850beda1fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aef97fb24481017e",
            "tags": {
              "Name": "INFRANAME-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff5e24b0af7b2f45"
            ]
          },
          "dependencies": [
            "aws_instance.INFRANAME-INSTANCE-PUBLIC-PROXY",
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-PROXY",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_subnet.INFRANAME-SUBNET-AZ-C",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-PUBLIC-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-08a1d19b4a95e55ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a1d19b4a95e55ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0641363c489249d60",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_ip": "44.192.59.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7774d3dcb98653d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052a4c8224baaa346",
            "tags": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-ADMIN"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa737f4530475b66"
            ]
          },
          "dependencies": [
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-PUBLIC-PROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-0e780e3e440fba691",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e780e3e440fba691",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5068bcaedb4d974",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_ip": "3.238.31.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4496fffc3bdc5a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052a4c8224baaa346",
            "tags": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-PROXY"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-PROXY"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063186b9476532fc1"
            ]
          },
          "dependencies": [
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-PROXY",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-PUBLIC-PROXY-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:344926317311:instance/i-0a02ed5f5ef3f2239",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a02ed5f5ef3f2239",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frist-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0168743e1c82fb251",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_ip": "3.234.146.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016042313d74a27ff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052a4c8224baaa346",
            "tags": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-PROXY-REVERSE"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-PUBLIC-PROXY-REVERSE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cb69e9c138d37c8"
            ]
          },
          "dependencies": [
            "aws_instance.INFRANAME-INSTANCE-AZ-A",
            "aws_instance.INFRANAME-INSTANCE-AZ-B",
            "aws_instance.INFRANAME-INSTANCE-AZ-C",
            "aws_instance.INFRANAME-INSTANCE-PUBLIC-PROXY",
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-PROXY",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_subnet.INFRANAME-SUBNET-AZ-A",
            "aws_subnet.INFRANAME-SUBNET-AZ-B",
            "aws_subnet.INFRANAME-SUBNET-AZ-C",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "INFRANAME-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:internet-gateway/igw-0b597ac075f7cc653",
            "id": "igw-0b597ac075f7cc653",
            "owner_id": "344926317311",
            "tags": {
              "Name": "INFRANAME-IGW"
            },
            "tags_all": {
              "Name": "INFRANAME-IGW"
            },
            "vpc_id": "vpc-0782b5e9bc008f03d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INFRANAME-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:route-table/rtb-0269f8576558d3b07",
            "id": "rtb-0269f8576558d3b07",
            "owner_id": "344926317311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b597ac075f7cc653",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INFRANAME-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PRIVATE-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09336b0ccece028a8",
            "route_table_id": "rtb-0269f8576558d3b07",
            "subnet_id": "subnet-0702337b2e58c9e59"
          },
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_route_table.INFRANAME-RTB-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-AZ-A",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PRIVATE-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095a09cd095c926d2",
            "route_table_id": "rtb-0269f8576558d3b07",
            "subnet_id": "subnet-0098aa8e044f55d58"
          },
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_route_table.INFRANAME-RTB-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-AZ-B",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PRIVATE-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0354b7c18309d5b97",
            "route_table_id": "rtb-0269f8576558d3b07",
            "subnet_id": "subnet-0aef97fb24481017e"
          },
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_route_table.INFRANAME-RTB-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-AZ-C",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a67aaafcd5e71dc9",
            "route_table_id": "rtb-0269f8576558d3b07",
            "subnet_id": "subnet-052a4c8224baaa346"
          },
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_route_table.INFRANAME-RTB-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:security-group/sg-0aa737f4530475b66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0aa737f4530475b66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230923101120788600000001",
            "name_prefix": "terraform-",
            "owner_id": "344926317311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-LOAD-ADMIN"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-LOAD-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-PROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:security-group/sg-063186b9476532fc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063186b9476532fc1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa737f4530475b66"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff5e24b0af7b2f45"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230923101854665700000003",
            "name_prefix": "terraform-",
            "owner_id": "344926317311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_security_group.INFRANAME-SG-WEB",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:security-group/sg-04cb69e9c138d37c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cb69e9c138d37c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa737f4530475b66"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230923101847278500000001",
            "name_prefix": "terraform-",
            "owner_id": "344926317311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-WEB"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:security-group/sg-0ff5e24b0af7b2f45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff5e24b0af7b2f45",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa737f4530475b66"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04cb69e9c138d37c8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230923101851149400000002",
            "name_prefix": "terraform-",
            "owner_id": "344926317311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-WEB"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INFRANAME-SG-ADMIN",
            "aws_security_group.INFRANAME-SG-REVERSE",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:subnet/subnet-0702337b2e58c9e59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0702337b2e58c9e59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344926317311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:subnet/subnet-0098aa8e044f55d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0098aa8e044f55d58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344926317311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:subnet/subnet-0aef97fb24481017e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aef97fb24481017e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344926317311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:subnet/subnet-052a4c8224baaa346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a4c8224baaa346",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344926317311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-0782b5e9bc008f03d"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "INFRANAME-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344926317311:vpc/vpc-0782b5e9bc008f03d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cd3090e7c98842a",
            "default_route_table_id": "rtb-082728007ae9339f5",
            "default_security_group_id": "sg-059e205c061ab2a97",
            "dhcp_options_id": "dopt-069fa66e57e3a4092",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0782b5e9bc008f03d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082728007ae9339f5",
            "owner_id": "344926317311",
            "tags": {
              "Name": "INFRANAME-VPC"
            },
            "tags_all": {
              "Name": "INFRANAME-VPC"
            }
          }
        }
      ]
    }
  ]
}